# khack2026

./: README.md
backend/: .env.template  create_episode_engine.py  main.py  pyproject.toml  veo_service.py
frontend/: FRONTEND_GUIDE.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx
frontend/components/: App.tsx  CharacterSelection.tsx  LandingPage.tsx  NarrativePanel.tsx  QuizCard.tsx  StoryBook.tsx
